# football-match-intelligence-api

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 20260305_0001_create_teams_table.py  20260305_0002_create_players_table.py  20260306_0003_create_matches_table.py  20260306_0004_create_events_table.py  20260311_0005_create_fixtures_table.py
app/: __init__.py  main.py
app/analytics/: __init__.py  clutch_impact.py  fixture_predictions.py  league_table.py  most_assists.py  player_impact.py  team_form.py  team_strength.py  top_scorers.py
app/api/: docs.py  router.py
app/core/: __init__.py  config.py  security.py
app/db/: base.py  session.py
app/frontend/: app.js  index.html  styles.css
app/models/: __init__.py  event.py  fixture.py  match.py  player.py  team.py
app/repositories/: __init__.py  analytics_repository.py  event_repository.py  fixture_repository.py  match_repository.py  player_repository.py  team_repository.py
app/schemas/: __init__.py  analytics.py  event.py  fixture.py  match.py  player.py  team.py
app/services/: __init__.py  analytics_service.py  errors.py  event_service.py  fixture_service.py  (+3 more)
docs/: ai_dataset_worklog.txt  openapi_export.json
scripts/: __init__.py  import_football_events.py  render_start.sh  scrape_premier_league_2025_26.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_events.py  test_fixtures.py  test_health.py  test_import_script.py  test_matches.py  test_players.py  test_rate_limit.py  test_teams.py
(+16 files in other folders)
