[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-match-intelligence-api"
version = "0.1.0"
description = "Football Match Intelligence API built with FastAPI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
