[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-match-intelligence-api"
version = "0.1.0"
description = "Football Match Intelligence API built with FastAPI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "alembic>=1.14,<2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
